syntax = "proto3";

import "./payment/message.proto";
import "./task/message.proto";

message EffectError {
  uint32 timestamp = 1;
  string message = 2;
  string code = 3;
}

message EffectAcknowledgment {
  uint32 timestamp = 1;
}

message EffectIdentifyRequest {
  uint32 timestamp = 1;
}

message EffectIdentifyResponse {
  optional string name = 1;
  string version = 2;
  bytes peer = 3;
  string pubkey = 4;
  uint32 batch_size = 5;
  uint32 task_timeout = 6;
  bool requires_registration = 7;
  bool is_registered = 8;
  bool is_connected = 9;
}

message RequestToWork {
  uint32 timestamp = 1;
  string recipient = 2;
  uint64 nonce = 3;
  string capabilities = 4;
  optional string access_code = 5;
}

message RequestToWorkResponse {
  uint32 timestamp = 1;
  string pubkey = 2;
  string peer = 3;
}

message EffectProtocolMessage {
  oneof message {
    Task task = 1;
    TaskAccepted task_accepted = 2;
    TaskRejected task_rejected = 3;
    TaskCompleted task_completed = 4;
    Payment payment = 5;
    PayoutRequest payout_request = 6;
    ProofRequest proof_request = 7;
    ProofResponse proof_response = 8;
    TemplateRequest template_request = 9;
    Template template_response = 10;
    EffectError error = 11;
    EffectAcknowledgment ack = 12;
    RequestToWork request_to_work = 13;
    RequestToWorkResponse request_to_work_response = 14;
    EffectIdentifyRequest identify_request = 15;
    EffectIdentifyResponse identify_response = 16;
    BulkProofRequest bulk_proof_request = 17;
  }
}
