syntax = "proto3";

import "task.proto";
import "accepted.proto";
import "rejected.proto";
import "completed.proto";

message TaskMessage {
  string task_id = 1;
  oneof message {
    Task task = 2;
    TaskAccepted task_accepted = 3;
    TaskRejected task_rejected = 4;
    TaskCompleted task_completed = 5;
  }
}
